--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 GEMINI_API_KEY=your_api_key_here
 LOG_LEVEL=INFO
-DATABASE_URL=sqlite:///./derivinsight.db
+DATABASE_URL=mysql+pymysql://admin:Janmasss@database-1.cxu2seuselq9.ap-south-1.rds.amazonaws.com:3306/derivinsight
